Fix chat info display (#27)
* fixed group infor

* more fixes

* change phone layout

* Prettified Code!

* took out unneeded d block

* merge fix

* Prettified Code!

* fixed phone issues

* Prettified Code!

* merge fix

* Prettified Code!

* stuff

* Prettified Code!

* added join button

* Prettified Code!

* added leave function

* took mat-content out of ngFor

* fix

* fixes

* Prettified Code!

* change layout

* Prettified Code!

* added the DM function to button

* Prettified Code!

* change height and width

* fix invite button

* Quick fixes for text truncate

* Prettified Code!

--- a/src/app/create-group/create-group.component.css
+++ b/src/app/create-group/create-group.component.css
@@ -3,7 +3,7 @@
   transition: 0.5s ease;
   backface-visibility: hidden;
   width: 200px;
-  height: 200px;
+  height: auto;
 }
 
 .text {
